fix admin bugs and nav user tag alignment

--- a/job-portal-client/src/App.css
+++ b/job-portal-client/src/App.css
@@ -33,7 +33,7 @@ li {
 
 .card {
   margin: 20px;
-  border: 2px solid #ededed;
+  border: 1px solid #ededed;
   padding: 20px;
   cursor: pointer;
 }
